# internal-toolchain

./: .gitignore  Cargo.toml  README.md  action.yml
.github/: dependabot.yml
.github/workflows/: auto_merge.yml  build.yml  schedule.yml  test.yml  trigger.yml  update-data.yml  update.yml
actions/get-code/: action.yml
actions/trigger/: action.yml
actions/update-index/: action.yml
actions/update-readme/: action.yml
actions/update_index/: action.yml
analysis/: analysis.ipynb  requirements.txt
example/: index.json
get-code/: action.yml
repo_template/: README.md
scripts/: parquet_size.sh
src/: data.rs  extract.rs  git.rs  main.rs  static_site.rs
src/archive/: content.rs  mod.rs  tar.rs  zip.rs
src/github/: create.rs  create_repo.graphql  get_index.graphql  graphql.config.yml  index.rs  latest_release.graphql  mod.rs  projects.rs  release_data.rs  status.rs  trigger_ci.rs  workflows.rs
src/github/graphql/: create_repo.graphql  get_template_data.graphql  graphql.config.yml  list_projects.graphql
src/readme/: mod.rs  readme_template.md
src/repository/: index.rs  mod.rs  package.rs  state.rs
src/site/: mod.rs  search.rs  static_site.rs
src/stats/: extensions.sql  fix_parquet.rs  mod.rs
templates/: package_search.html
