[package]
name = "pypi-data-toolchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pypi-data-toolchain"
test = false
bench = false

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
base64 = "0.22.0"
bzip2 = "0.4.4"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
cli-table = { version = "0.4.7", default-features = false }
content_inspector = "0.2.4"
duct = "0.13.7"
flate2 = { version = "1.0.34", features = ["zlib-ng-compat"], default-features = false }
git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }
graphql_client = "0.14.0"
humansize = "2.1.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
lazy-regex = { version = "3.0.2", features = ["perf", "perf-inline", "perf-cache", "perf-dfa", "perf-literal", "unicode"] }
osshkeys = "0.7.0"
polars = { version = "0.44.0", features = ["lazy", "dtype-categorical", "dtype-array", "dtype-datetime", "parquet"] }

rand = "0.8.5"
rayon = "1.8.1"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "serde_json", "url"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
sodiumoxide = "0.2.7"
tar = "0.4.42"
tempdir = "0.3.7"
thiserror = "1.0.65"
tinytemplate = "1.2.1"
tracing = { version = "0.1.40", features = ["max_level_info", "release_max_level_warn"] }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
ureq = { version = "2.9.6", features = ["tls", "json", "gzip", "brotli"] }
url = { version = "2.4.0", features = ["serde"] }
zip = { version = "2.2.0", features = ["deflate-zlib", "deflate", "zstd"] }

[profile.release]
incremental = true

[profile.optimized]
inherits = "release"
lto = true
strip = "debuginfo"
codegen-units = 1
