[package]
name = "pypi-data-toolchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pypi-data-toolchain"
test = false
bench = false

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
base64 = "0.22.0"
bzip2 = "0.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive", "env"] }
cli-table = { version = "0.4.7", default-features = false }
content_inspector = "0.2.4"
duct = "0.13.7"
flate2 = { version = "1.0.35", features = ["zlib-ng-compat"], default-features = false }
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
graphql_client = "0.14.0"
humansize = "2.1.3"
indicatif = { version = "0.17.9", features = ["rayon"] }
itertools = "0.14.0"
lazy-regex = { version = "3.4.1", features = ["perf", "perf-inline", "perf-cache", "perf-dfa", "perf-literal", "unicode"] }
osshkeys = "0.7.0"
polars = { version = "0.45.1", features = ["lazy", "dtype-categorical", "dtype-array", "dtype-datetime", "parquet"] }

rand = "0.8.5"
rayon = "1.8.1"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "serde_json", "url"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
sodiumoxide = "0.2.7"
tar = "0.4.43"
tempdir = "0.3.7"
thiserror = "2.0.11"
tinytemplate = "1.2.1"
tracing = { version = "0.1.41", features = ["max_level_info", "release_max_level_warn"] }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
ureq = { version = "2.11.0", features = ["tls", "json", "gzip", "brotli"] }
url = { version = "2.5.4", features = ["serde"] }
zip = { version = "2.2.2", features = ["deflate-zlib", "deflate", "zstd"] }

[profile.release]
incremental = true

[profile.optimized]
inherits = "release"
lto = true
strip = "debuginfo"
codegen-units = 1
